Ensure project description is aligned #5993

--- a/src/app/styles/components/project/_project.scss
+++ b/src/app/styles/components/project/_project.scss
@@ -28,8 +28,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: (-1 * units(2)) (-1 * units(2)) 0;
+  margin: (-1 * units(3)) (-1 * units(2)) units(2);
   min-height: units(4);
+  font: font(caption);
 
   &-container {
     @include when-smaller-than(mobile-breakpoint) {
